// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardTile should render correctly with amex card 1`] = `
<div>
  <div
    className="cardTile"
  >
    <div
      className="cardTile__cardDetails"
    >
      <Styled(BodyCopy)
        className="cardTile__heading"
        color="text.primary"
        component="p"
        data-locator="payment-creditdebitnametitle"
        fontFamily="secondary"
        fontSize="fs16"
        fontWeight="normal"
        letterSpacing="normal"
        lineHeight="normal"
        tag="span"
        textAlign="left"
      >
        Credit Card
      </Styled(BodyCopy)>
      <Styled(BodyCopy)
        className="cardTile__number"
        color="text.primary"
        component="p"
        data-locator="payment-creditdebitendingtext"
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="black"
        letterSpacing="normal"
        lineHeight="normal"
        lineHeights="lh107"
        tag="span"
        textAlign="left"
      >
        Card ending in 6765
      </Styled(BodyCopy)>
      <Styled(BodyCopy)
        className="cardTile__expiry"
        color="text.primary"
        component="p"
        data-locator="payment-creditdebitexpiretext"
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="semibold"
        letterSpacing="normal"
        lineHeight="normal"
        lineHeights="lh115"
        tag="span"
        textAlign="left"
      >
        Expires on 10/2025
      </Styled(BodyCopy)>
      <Address
        address={
          Object {
            "addressLine1": "Yucca Street",
            "addressLine2": "",
            "city": "Los Angeles",
            "country": "US",
            "firstName": "six",
            "lastName": "test",
            "phone1": "3214567890",
            "state": "CA",
            "zipCode": "90028",
          }
        }
        dataLocatorPrefix="payment-creditcard"
        fontWeight="normal"
        showCountry={false}
        showPhone={false}
      />
    </div>
    <div
      className="cardTile__defaultSection"
    >
      <Styled(Badge)
        dataLocator="payment-carddefaultpaymentbadge"
        noMargin={true}
        showCheckmark={true}
      >
        DEFAULT PAYMENT
      </Styled(Badge)>
      <div
        className="cardTile__img_wrapper elem-mt-XS"
      >
        <img
          alt="COMPASSAMEX"
          className="cardTile__img"
          data-locator="Amex"
          src="/static/images/amex.svg"
        />
      </div>
    </div>
  </div>
  <div
    className="cardTile__ctaLinks"
  >
    <Styled(Anchor)
      anchorVariation="primary"
      className="cardTile__anchor"
      data-locator="payment-creditdebiteditlink"
      fontSizeVariation="large"
      to="/#"
      underline={true}
    >
      Edit
    </Styled(Anchor)>
    <Styled(Anchor)
      anchorVariation="primary"
      className="cardTile__anchor"
      data-locator="payment-creditdebitdeletelink"
      fontSizeVariation="large"
      onClick={[Function]}
      to="/#"
      underline={true}
    >
      Delete
    </Styled(Anchor)>
  </div>
</div>
`;

exports[`CardTile should render correctly with delete gift  card 1`] = `
<div>
  <div
    className="cardTile"
  >
    <div
      className="cardTile__cardDetails"
    >
      <Styled(BodyCopy)
        className="cardTile__heading"
        color="text.primary"
        component="p"
        data-locator="payment-creditdebitnametitle"
        fontFamily="secondary"
        fontSize="fs16"
        fontWeight="normal"
        letterSpacing="normal"
        lineHeight="normal"
        tag="span"
        textAlign="left"
      >
        My Place Rewards Credit Card
      </Styled(BodyCopy)>
      <Styled(BodyCopy)
        className="cardTile__number"
        color="text.primary"
        component="p"
        data-locator="payment-creditdebitendingtext"
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="black"
        letterSpacing="normal"
        lineHeight="normal"
        lineHeights="lh107"
        tag="span"
        textAlign="left"
      >
        Card ending in 6765
      </Styled(BodyCopy)>
      <Address
        address={
          Object {
            "addressLine1": "Yucca Street",
            "addressLine2": "",
            "city": "Los Angeles",
            "country": "US",
            "firstName": "six",
            "lastName": "test",
            "phone1": "3214567890",
            "state": "CA",
            "zipCode": "90028",
          }
        }
        dataLocatorPrefix="payment-creditcard"
        fontWeight="normal"
        showCountry={false}
        showPhone={false}
      />
    </div>
    <div
      className="cardTile__defaultSection"
    >
      <Styled(Anchor)
        anchorVariation="primary"
        data-locator="payment-makedefault"
        fontSizeVariation="small"
        onClick={[Function]}
        to="/#"
        underline={true}
      >
        Make Default
      </Styled(Anchor)>
      <div
        className="cardTile__img_wrapper elem-mt-MED"
      >
        <img
          alt="PLACE CARD"
          className="cardTile__img"
          data-locator="PLACE CARD"
          src="/static/images/TCP-CC.svg"
        />
      </div>
    </div>
  </div>
  <div
    className="cardTile__ctaLinks"
  >
    <Styled(Anchor)
      anchorVariation="primary"
      className="cardTile__anchor"
      data-locator="payment-creditdebiteditlink"
      fontSizeVariation="large"
      to="/#"
      underline={true}
    >
      Edit
    </Styled(Anchor)>
    <Styled(Anchor)
      anchorVariation="primary"
      className="cardTile__anchor"
      data-locator="payment-creditdebitdeletelink"
      fontSizeVariation="large"
      onClick={[Function]}
      to="/#"
      underline={true}
    >
      Delete
    </Styled(Anchor)>
  </div>
</div>
`;

exports[`CardTile should render correctly with discover card 1`] = `
<div>
  <div
    className="cardTile"
  >
    <div
      className="cardTile__cardDetails"
    >
      <Styled(BodyCopy)
        className="cardTile__heading"
        color="text.primary"
        component="p"
        data-locator="payment-creditdebitnametitle"
        fontFamily="secondary"
        fontSize="fs16"
        fontWeight="normal"
        letterSpacing="normal"
        lineHeight="normal"
        tag="span"
        textAlign="left"
      >
        Credit Card
      </Styled(BodyCopy)>
      <Styled(BodyCopy)
        className="cardTile__number"
        color="text.primary"
        component="p"
        data-locator="payment-creditdebitendingtext"
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="black"
        letterSpacing="normal"
        lineHeight="normal"
        lineHeights="lh107"
        tag="span"
        textAlign="left"
      >
        Card ending in 6765
      </Styled(BodyCopy)>
      <Styled(BodyCopy)
        className="cardTile__expiry"
        color="text.primary"
        component="p"
        data-locator="payment-creditdebitexpiretext"
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="semibold"
        letterSpacing="normal"
        lineHeight="normal"
        lineHeights="lh115"
        tag="span"
        textAlign="left"
      >
        Expires on 10/2025
      </Styled(BodyCopy)>
      <Address
        address={
          Object {
            "addressLine1": "Yucca Street",
            "addressLine2": "",
            "city": "Los Angeles",
            "country": "US",
            "firstName": "six",
            "lastName": "test",
            "phone1": "3214567890",
            "state": "CA",
            "zipCode": "90028",
          }
        }
        dataLocatorPrefix="payment-creditcard"
        fontWeight="normal"
        showCountry={false}
        showPhone={false}
      />
    </div>
    <div
      className="cardTile__defaultSection"
    >
      <Styled(Anchor)
        anchorVariation="primary"
        data-locator="payment-makedefault"
        fontSizeVariation="small"
        onClick={[Function]}
        to="/#"
        underline={true}
      >
        Make Default
      </Styled(Anchor)>
      <div
        className="cardTile__img_wrapper elem-mt-MED"
      >
        <img
          alt="COMPASSDISCOVER"
          className="cardTile__img"
          data-locator="DISC"
          src="/static/images/discover.svg"
        />
      </div>
    </div>
  </div>
  <div
    className="cardTile__ctaLinks"
  >
    <Styled(Anchor)
      anchorVariation="primary"
      className="cardTile__anchor"
      data-locator="payment-creditdebiteditlink"
      fontSizeVariation="large"
      to="/#"
      underline={true}
    >
      Edit
    </Styled(Anchor)>
    <Styled(Anchor)
      anchorVariation="primary"
      className="cardTile__anchor"
      data-locator="payment-creditdebitdeletelink"
      fontSizeVariation="large"
      onClick={[Function]}
      to="/#"
      underline={true}
    >
      Delete
    </Styled(Anchor)>
  </div>
</div>
`;

exports[`CardTile should render correctly with gift card 1`] = `
<div>
  <div
    className="cardTile"
  >
    <div
      className="cardTile__cardDetails"
    >
      <Styled(BodyCopy)
        className="cardTile__heading"
        color="text.primary"
        component="p"
        data-locator="payment-giftcardnametitle"
        fontFamily="secondary"
        fontSize="fs16"
        fontWeight="normal"
        letterSpacing="normal"
        lineHeight="normal"
        tag="span"
        textAlign="left"
      >
        Gift Card Name
      </Styled(BodyCopy)>
      <Styled(BodyCopy)
        className="cardTile__number"
        color="text.primary"
        component="p"
        data-locator="payment-giftcardendingtext"
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="black"
        letterSpacing="normal"
        lineHeight="normal"
        lineHeights="lh107"
        tag="span"
        textAlign="left"
      >
        Card ending in 6765
      </Styled(BodyCopy)>
    </div>
    <div
      className="cardTile__defaultSection"
    >
      <div
        className="cardTile__img_wrapper elem-mt-XL"
      >
        <img
          alt="GiftCard"
          className="cardTile__img"
          data-locator="GC"
          src="/static/images/TCP-gift.svg"
        />
      </div>
    </div>
  </div>
  <div
    className="giftcardTile__wrapper"
  >
    <form
      autoComplete="off"
      noValidate={true}
    >
      <div
        className="giftcardTile__row"
      >
        <Recaptcha
          expiredCallback={[Function]}
          sitekey="6LdYiRsTAAAAAHF4Yntsq8mPdWgHaTTFHsk8rax8"
          verifyCallback={[Function]}
        />
        <Field
          component={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-gzVnrw",
                "isStatic": false,
                "rules": Array [
                  "
  ",
                  "
  position: relative;
  display: block;

  .TextBox__label {
    font-size: ",
                  [Function],
                  "px;
    padding: 0;
    position: absolute;
    top: ",
                  [Function],
                  ";
    ",
                  [Function],
                  "
  }

  .TextBox__input {
    margin: 0;
    outline: 0;
    font-size: ",
                  [Function],
                  "px;
    color: ",
                  [Function],
                  ";
    width: 100%;
    background-position: left top;
    background-repeat: no-repeat;
    background-size: contain;
    border: 0 solid transparent;
    border-bottom: 1px solid ",
                  [Function],
                  ";
    padding-bottom: ",
                  [Function],
                  ";
    margin-bottom: ",
                  [Function],
                  ";
    padding-top: ",
                  [Function],
                  ";

    ",
                  [Function],
                  "

    ",
                  [Function],
                  ";

    &:focus + .TextBox__label {
      font-size: ",
                  [Function],
                  "px;
      font-weight: ",
                  [Function],
                  ";
      top: 0;
    }
  }
  .success__checkmark {
    display: none;
  }
  &.textbox_validation_success .TextBox__input {
    border-bottom: 1px solid ",
                  [Function],
                  ";
  }

  &.textbox_validation_success .success__checkmark {
    display: block;
    width: 15px;
    height: 8px;
    margin-left: ",
                  [Function],
                  ";
    transform: rotate(-45deg);
    transform-origin: left;
    position: absolute;
    right: 0;
    bottom: 10px;

    &:before {
      content: '';
      position: absolute;
      width: 3px;
      height: 100%;
      background-color: ",
                  [Function],
                  ";
    }

    &:after {
      content: '';
      position: absolute;
      width: 100%;
      height: 3px;
      background-color: ",
                  [Function],
                  ";
      bottom: 0;
    }
  }

  ",
                  [Function],
                  ";
",
                  ";
",
                ],
              },
              "displayName": "Styled(TextBox)",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-gzVnrw",
              "target": [Function],
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          data-locator="gift-card-recaptchcb"
          id="recaptchaToken"
          name="recaptchaToken"
          placeholder="recaptcha value"
          title=""
          type="hidden"
        />
        <Styled(Button)
          buttonVariation="variable-width"
          data-locator="gift-card-checkbalance-btn"
          fill="BLUE"
          onClick={[Function]}
          type="submit"
        >
           Check Balance
        </Styled(Button)>
      </div>
    </form>
  </div>
  <div
    className="cardTile__ctaLinks"
  >
    <Styled(Anchor)
      anchorVariation="primary"
      className="cardTile__anchor"
      data-locator="payment-giftcarddeletelink"
      fontSizeVariation="large"
      onClick={[Function]}
      to="/#"
      underline={true}
    >
      Delete
    </Styled(Anchor)>
  </div>
</div>
`;

exports[`CardTile should render correctly with master card 1`] = `
<div>
  <div
    className="cardTile"
  >
    <div
      className="cardTile__cardDetails"
    >
      <Styled(BodyCopy)
        className="cardTile__heading"
        color="text.primary"
        component="p"
        data-locator="payment-creditdebitnametitle"
        fontFamily="secondary"
        fontSize="fs16"
        fontWeight="normal"
        letterSpacing="normal"
        lineHeight="normal"
        tag="span"
        textAlign="left"
      >
        Credit Card
      </Styled(BodyCopy)>
      <Styled(BodyCopy)
        className="cardTile__number"
        color="text.primary"
        component="p"
        data-locator="payment-creditdebitendingtext"
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="black"
        letterSpacing="normal"
        lineHeight="normal"
        lineHeights="lh107"
        tag="span"
        textAlign="left"
      >
        Card ending in 6765
      </Styled(BodyCopy)>
      <Styled(BodyCopy)
        className="cardTile__expiry"
        color="text.primary"
        component="p"
        data-locator="payment-creditdebitexpiretext"
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="semibold"
        letterSpacing="normal"
        lineHeight="normal"
        lineHeights="lh115"
        tag="span"
        textAlign="left"
      >
        Expires on 10/2025
      </Styled(BodyCopy)>
      <Address
        address={
          Object {
            "addressLine1": "Yucca Street",
            "addressLine2": "",
            "city": "Los Angeles",
            "country": "US",
            "firstName": "six",
            "lastName": "test",
            "phone1": "3214567890",
            "state": "CA",
            "zipCode": "90028",
          }
        }
        dataLocatorPrefix="payment-creditcard"
        fontWeight="normal"
        showCountry={false}
        showPhone={false}
      />
    </div>
    <div
      className="cardTile__defaultSection"
    >
      <Styled(Anchor)
        anchorVariation="primary"
        data-locator="payment-makedefault"
        fontSizeVariation="small"
        onClick={[Function]}
        to="/#"
        underline={true}
      >
        Make Default
      </Styled(Anchor)>
      <div
        className="cardTile__img_wrapper elem-mt-MED"
      >
        <img
          alt="COMPASSMASTERCARD"
          className="cardTile__img"
          data-locator="MC"
          src="/static/images/mastercard.svg"
        />
      </div>
    </div>
  </div>
  <div
    className="cardTile__ctaLinks"
  >
    <Styled(Anchor)
      anchorVariation="primary"
      className="cardTile__anchor"
      data-locator="payment-creditdebiteditlink"
      fontSizeVariation="large"
      to="/#"
      underline={true}
    >
      Edit
    </Styled(Anchor)>
    <Styled(Anchor)
      anchorVariation="primary"
      className="cardTile__anchor"
      data-locator="payment-creditdebitdeletelink"
      fontSizeVariation="large"
      onClick={[Function]}
      to="/#"
      underline={true}
    >
      Delete
    </Styled(Anchor)>
  </div>
</div>
`;

exports[`CardTile should render correctly with notification  gift card 1`] = `
<div>
  <Styled(Notification)
    colSize={
      Object {
        "large": 12,
        "medium": 8,
        "small": 6,
      }
    }
    message="INVLAID CAPTCHA"
    status="error"
  />
  <div
    className="cardTile"
  >
    <div
      className="cardTile__cardDetails"
    >
      <Styled(BodyCopy)
        className="cardTile__heading"
        color="text.primary"
        component="p"
        data-locator="payment-giftcardnametitle"
        fontFamily="secondary"
        fontSize="fs16"
        fontWeight="normal"
        letterSpacing="normal"
        lineHeight="normal"
        tag="span"
        textAlign="left"
      >
        Gift Card Name
      </Styled(BodyCopy)>
      <Styled(BodyCopy)
        className="cardTile__number"
        color="text.primary"
        component="p"
        data-locator="payment-giftcardendingtext"
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="black"
        letterSpacing="normal"
        lineHeight="normal"
        lineHeights="lh107"
        tag="span"
        textAlign="left"
      >
        Card ending in 6765
      </Styled(BodyCopy)>
    </div>
    <div
      className="cardTile__defaultSection"
    >
      <div
        className="cardTile__img_wrapper elem-mt-XL"
      >
        <img
          alt="GiftCard"
          className="cardTile__img"
          data-locator="GC"
          src="/static/images/TCP-gift.svg"
        />
      </div>
    </div>
  </div>
  <div
    className="giftcardTile__wrapper"
  >
    <form
      autoComplete="off"
      noValidate={true}
    >
      <div
        className="giftcardTile__row"
      >
        <Recaptcha
          expiredCallback={[Function]}
          sitekey="6LdYiRsTAAAAAHF4Yntsq8mPdWgHaTTFHsk8rax8"
          verifyCallback={[Function]}
        />
        <Field
          component={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-gzVnrw",
                "isStatic": false,
                "rules": Array [
                  "
  ",
                  "
  position: relative;
  display: block;

  .TextBox__label {
    font-size: ",
                  [Function],
                  "px;
    padding: 0;
    position: absolute;
    top: ",
                  [Function],
                  ";
    ",
                  [Function],
                  "
  }

  .TextBox__input {
    margin: 0;
    outline: 0;
    font-size: ",
                  [Function],
                  "px;
    color: ",
                  [Function],
                  ";
    width: 100%;
    background-position: left top;
    background-repeat: no-repeat;
    background-size: contain;
    border: 0 solid transparent;
    border-bottom: 1px solid ",
                  [Function],
                  ";
    padding-bottom: ",
                  [Function],
                  ";
    margin-bottom: ",
                  [Function],
                  ";
    padding-top: ",
                  [Function],
                  ";

    ",
                  [Function],
                  "

    ",
                  [Function],
                  ";

    &:focus + .TextBox__label {
      font-size: ",
                  [Function],
                  "px;
      font-weight: ",
                  [Function],
                  ";
      top: 0;
    }
  }
  .success__checkmark {
    display: none;
  }
  &.textbox_validation_success .TextBox__input {
    border-bottom: 1px solid ",
                  [Function],
                  ";
  }

  &.textbox_validation_success .success__checkmark {
    display: block;
    width: 15px;
    height: 8px;
    margin-left: ",
                  [Function],
                  ";
    transform: rotate(-45deg);
    transform-origin: left;
    position: absolute;
    right: 0;
    bottom: 10px;

    &:before {
      content: '';
      position: absolute;
      width: 3px;
      height: 100%;
      background-color: ",
                  [Function],
                  ";
    }

    &:after {
      content: '';
      position: absolute;
      width: 100%;
      height: 3px;
      background-color: ",
                  [Function],
                  ";
      bottom: 0;
    }
  }

  ",
                  [Function],
                  ";
",
                  ";
",
                ],
              },
              "displayName": "Styled(TextBox)",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-gzVnrw",
              "target": [Function],
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          data-locator="gift-card-recaptchcb"
          id="recaptchaToken"
          name="recaptchaToken"
          placeholder="recaptcha value"
          title=""
          type="hidden"
        />
        <Styled(Button)
          buttonVariation="variable-width"
          data-locator="gift-card-checkbalance-btn"
          fill="BLUE"
          onClick={[Function]}
          type="submit"
        >
           Check Balance
        </Styled(Button)>
      </div>
    </form>
  </div>
  <div
    className="cardTile__ctaLinks"
  >
    <Styled(Anchor)
      anchorVariation="primary"
      className="cardTile__anchor"
      data-locator="payment-giftcarddeletelink"
      fontSizeVariation="large"
      onClick={[Function]}
      to="/#"
      underline={true}
    >
      Delete
    </Styled(Anchor)>
  </div>
</div>
`;

exports[`CardTile should render correctly with plcc card 1`] = `
<div>
  <div
    className="cardTile"
  >
    <div
      className="cardTile__cardDetails"
    >
      <Styled(BodyCopy)
        className="cardTile__heading"
        color="text.primary"
        component="p"
        data-locator="payment-creditdebitnametitle"
        fontFamily="secondary"
        fontSize="fs16"
        fontWeight="normal"
        letterSpacing="normal"
        lineHeight="normal"
        tag="span"
        textAlign="left"
      >
        My Place Rewards Credit Card
      </Styled(BodyCopy)>
      <Styled(BodyCopy)
        className="cardTile__number"
        color="text.primary"
        component="p"
        data-locator="payment-creditdebitendingtext"
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="black"
        letterSpacing="normal"
        lineHeight="normal"
        lineHeights="lh107"
        tag="span"
        textAlign="left"
      >
        Card ending in 6765
      </Styled(BodyCopy)>
      <Address
        address={
          Object {
            "addressLine1": "Yucca Street",
            "addressLine2": "",
            "city": "Los Angeles",
            "country": "US",
            "firstName": "six",
            "lastName": "test",
            "phone1": "3214567890",
            "state": "CA",
            "zipCode": "90028",
          }
        }
        dataLocatorPrefix="payment-creditcard"
        fontWeight="normal"
        showCountry={false}
        showPhone={false}
      />
    </div>
    <div
      className="cardTile__defaultSection"
    >
      <Styled(Anchor)
        anchorVariation="primary"
        data-locator="payment-makedefault"
        fontSizeVariation="small"
        onClick={[Function]}
        to="/#"
        underline={true}
      >
        Make Default
      </Styled(Anchor)>
      <div
        className="cardTile__img_wrapper elem-mt-MED"
      >
        <img
          alt="PLACE CARD"
          className="cardTile__img"
          data-locator="PLACE CARD"
          src="/static/images/TCP-CC.svg"
        />
      </div>
    </div>
  </div>
  <div
    className="cardTile__ctaLinks"
  >
    <Styled(Anchor)
      anchorVariation="primary"
      className="cardTile__anchor"
      data-locator="payment-creditdebiteditlink"
      fontSizeVariation="large"
      to="/#"
      underline={true}
    >
      Edit
    </Styled(Anchor)>
    <Styled(Anchor)
      anchorVariation="primary"
      className="cardTile__anchor"
      data-locator="payment-creditdebitdeletelink"
      fontSizeVariation="large"
      onClick={[Function]}
      to="/#"
      underline={true}
    >
      Delete
    </Styled(Anchor)>
  </div>
</div>
`;

exports[`CardTile should render correctly with venmocard 1`] = `
<div>
  <div
    className="cardTile"
  >
    <div
      className="cardTile__cardDetails"
    >
      <Styled(BodyCopy)
        className="cardTile__heading"
        color="text.primary"
        component="p"
        data-locator="payment-venmonametitle"
        fontFamily="secondary"
        fontSize="fs16"
        fontWeight="normal"
        letterSpacing="normal"
        lineHeight="normal"
        tag="span"
        textAlign="left"
      >
        Your Venmo Account
      </Styled(BodyCopy)>
      <Styled(BodyCopy)
        className="cardTile__heading"
        color="text.primary"
        component="p"
        data-locator="payment-venmoid"
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="extrabold"
        letterSpacing="normal"
        lineHeight="normal"
        lineHeights="lh107"
        tag="span"
        textAlign="left"
      >
        1234
      </Styled(BodyCopy)>
    </div>
    <div
      className="cardTile__defaultSection"
    >
      <div
        className="cardTile__img_wrapper elem-mt-XL"
      >
        <img
          alt="VENMO"
          className="cardTile__img"
          data-locator="VENMO"
          src="/static/images/venmo.svg"
        />
      </div>
    </div>
  </div>
  <div
    className="cardTile__ctaLinks"
  >
    <Styled(Anchor)
      anchorVariation="primary"
      className="cardTile__anchor"
      data-locator="payment-venmodeletelink"
      fontSizeVariation="large"
      onClick={[Function]}
      to="/#"
      underline={true}
    >
      Delete
    </Styled(Anchor)>
  </div>
</div>
`;

exports[`CardTile should render correctly with visa card 1`] = `
<div>
  <div
    className="cardTile"
  >
    <div
      className="cardTile__cardDetails"
    >
      <Styled(BodyCopy)
        className="cardTile__heading"
        color="text.primary"
        component="p"
        data-locator="payment-creditdebitnametitle"
        fontFamily="secondary"
        fontSize="fs16"
        fontWeight="normal"
        letterSpacing="normal"
        lineHeight="normal"
        tag="span"
        textAlign="left"
      >
        Credit Card
      </Styled(BodyCopy)>
      <Styled(BodyCopy)
        className="cardTile__number"
        color="text.primary"
        component="p"
        data-locator="payment-creditdebitendingtext"
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="black"
        letterSpacing="normal"
        lineHeight="normal"
        lineHeights="lh107"
        tag="span"
        textAlign="left"
      >
        Card ending in 6765
      </Styled(BodyCopy)>
      <Styled(BodyCopy)
        className="cardTile__expiry"
        color="text.primary"
        component="p"
        data-locator="payment-creditdebitexpiretext"
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="semibold"
        letterSpacing="normal"
        lineHeight="normal"
        lineHeights="lh115"
        tag="span"
        textAlign="left"
      >
        Expires on 10/2025
      </Styled(BodyCopy)>
      <Address
        address={
          Object {
            "addressLine1": "Yucca Street",
            "addressLine2": "",
            "city": "Los Angeles",
            "country": "US",
            "firstName": "six",
            "lastName": "test",
            "phone1": "3214567890",
            "state": "CA",
            "zipCode": "90028",
          }
        }
        dataLocatorPrefix="payment-creditcard"
        fontWeight="normal"
        showCountry={false}
        showPhone={false}
      />
    </div>
    <div
      className="cardTile__defaultSection"
    >
      <Styled(Anchor)
        anchorVariation="primary"
        data-locator="payment-makedefault"
        fontSizeVariation="small"
        onClick={[Function]}
        to="/#"
        underline={true}
      >
        Make Default
      </Styled(Anchor)>
      <div
        className="cardTile__img_wrapper elem-mt-MED"
      >
        <img
          alt="COMPASSVISA"
          className="cardTile__img"
          data-locator="Visa"
          src="/static/images/visa.svg"
        />
      </div>
    </div>
  </div>
  <div
    className="cardTile__ctaLinks"
  >
    <Styled(Anchor)
      anchorVariation="primary"
      className="cardTile__anchor"
      data-locator="payment-creditdebiteditlink"
      fontSizeVariation="large"
      to="/#"
      underline={true}
    >
      Edit
    </Styled(Anchor)>
    <Styled(Anchor)
      anchorVariation="primary"
      className="cardTile__anchor"
      data-locator="payment-creditdebitdeletelink"
      fontSizeVariation="large"
      onClick={[Function]}
      to="/#"
      underline={true}
    >
      Delete
    </Styled(Anchor)>
  </div>
</div>
`;

exports[`CardTile should show loading 1`] = `
<div>
  <div
    className="cardTile"
  >
    <div
      className="cardTile__cardDetails"
    >
      <Styled(BodyCopy)
        className="cardTile__heading"
        color="text.primary"
        component="p"
        data-locator="payment-giftcardnametitle"
        fontFamily="secondary"
        fontSize="fs16"
        fontWeight="normal"
        letterSpacing="normal"
        lineHeight="normal"
        tag="span"
        textAlign="left"
      >
        Gift Card Name
      </Styled(BodyCopy)>
      <Styled(BodyCopy)
        className="cardTile__number"
        color="text.primary"
        component="p"
        data-locator="payment-giftcardendingtext"
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="black"
        letterSpacing="normal"
        lineHeight="normal"
        lineHeights="lh107"
        tag="span"
        textAlign="left"
      >
        Card ending in 6765
      </Styled(BodyCopy)>
    </div>
    <div
      className="cardTile__defaultSection"
    >
      <div
        className="cardTile__img_wrapper elem-mt-XL"
      >
        <img
          alt="GiftCard"
          className="cardTile__img"
          data-locator="GC"
          src="/static/images/TCP-gift.svg"
        />
      </div>
    </div>
  </div>
  <div
    className="giftcardTile__wrapper"
  >
    <form
      autoComplete="off"
      noValidate={true}
    >
      <div
        className="giftcardTile__row"
      >
        <Field
          component={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-gzVnrw",
                "isStatic": false,
                "rules": Array [
                  "
  ",
                  "
  position: relative;
  display: block;

  .TextBox__label {
    font-size: ",
                  [Function],
                  "px;
    padding: 0;
    position: absolute;
    top: ",
                  [Function],
                  ";
    ",
                  [Function],
                  "
  }

  .TextBox__input {
    margin: 0;
    outline: 0;
    font-size: ",
                  [Function],
                  "px;
    color: ",
                  [Function],
                  ";
    width: 100%;
    background-position: left top;
    background-repeat: no-repeat;
    background-size: contain;
    border: 0 solid transparent;
    border-bottom: 1px solid ",
                  [Function],
                  ";
    padding-bottom: ",
                  [Function],
                  ";
    margin-bottom: ",
                  [Function],
                  ";
    padding-top: ",
                  [Function],
                  ";

    ",
                  [Function],
                  "

    ",
                  [Function],
                  ";

    &:focus + .TextBox__label {
      font-size: ",
                  [Function],
                  "px;
      font-weight: ",
                  [Function],
                  ";
      top: 0;
    }
  }
  .success__checkmark {
    display: none;
  }
  &.textbox_validation_success .TextBox__input {
    border-bottom: 1px solid ",
                  [Function],
                  ";
  }

  &.textbox_validation_success .success__checkmark {
    display: block;
    width: 15px;
    height: 8px;
    margin-left: ",
                  [Function],
                  ";
    transform: rotate(-45deg);
    transform-origin: left;
    position: absolute;
    right: 0;
    bottom: 10px;

    &:before {
      content: '';
      position: absolute;
      width: 3px;
      height: 100%;
      background-color: ",
                  [Function],
                  ";
    }

    &:after {
      content: '';
      position: absolute;
      width: 100%;
      height: 3px;
      background-color: ",
                  [Function],
                  ";
      bottom: 0;
    }
  }

  ",
                  [Function],
                  ";
",
                  ";
",
                ],
              },
              "displayName": "Styled(TextBox)",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-gzVnrw",
              "target": [Function],
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          data-locator="gift-card-recaptchcb"
          id="recaptchaToken"
          name="recaptchaToken"
          placeholder="recaptcha value"
          title=""
          type="hidden"
        />
        <Styled(BodyCopy)
          className=""
          color="text.primary"
          component="p"
          fontFamily="secondary"
          fontSize="fs24"
          fontWeight="extrabold"
          letterSpacing="normal"
          lineHeight="normal"
          lineHeights="lh115"
          tag="span"
          textAlign="left"
        >
          LOADING...
        </Styled(BodyCopy)>
      </div>
    </form>
  </div>
  <div
    className="cardTile__ctaLinks"
  >
    <Styled(Anchor)
      anchorVariation="primary"
      className="cardTile__anchor"
      data-locator="payment-giftcarddeletelink"
      fontSizeVariation="large"
      onClick={[Function]}
      to="/#"
      underline={true}
    >
      Delete
    </Styled(Anchor)>
  </div>
</div>
`;

exports[`CardTile should show remining balance 1`] = `
<div>
  <div
    className="cardTile"
  >
    <div
      className="cardTile__cardDetails"
    >
      <Styled(BodyCopy)
        className="cardTile__heading"
        color="text.primary"
        component="p"
        data-locator="payment-giftcardnametitle"
        fontFamily="secondary"
        fontSize="fs16"
        fontWeight="normal"
        letterSpacing="normal"
        lineHeight="normal"
        tag="span"
        textAlign="left"
      >
        Gift Card Name
      </Styled(BodyCopy)>
      <Styled(BodyCopy)
        className="cardTile__number"
        color="text.primary"
        component="p"
        data-locator="payment-giftcardendingtext"
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="black"
        letterSpacing="normal"
        lineHeight="normal"
        lineHeights="lh107"
        tag="span"
        textAlign="left"
      >
        Card ending in 6765
      </Styled(BodyCopy)>
    </div>
    <div
      className="cardTile__defaultSection"
    >
      <div
        className="cardTile__img_wrapper elem-mt-XL"
      >
        <img
          alt="GiftCard"
          className="cardTile__img"
          data-locator="GC"
          src="/static/images/TCP-gift.svg"
        />
      </div>
    </div>
  </div>
  <div
    className="giftcardTile__wrapper"
  >
    <form
      autoComplete="off"
      noValidate={true}
    >
      <div
        className="giftcardTile__row"
      >
        <Field
          component={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-gzVnrw",
                "isStatic": false,
                "rules": Array [
                  "
  ",
                  "
  position: relative;
  display: block;

  .TextBox__label {
    font-size: ",
                  [Function],
                  "px;
    padding: 0;
    position: absolute;
    top: ",
                  [Function],
                  ";
    ",
                  [Function],
                  "
  }

  .TextBox__input {
    margin: 0;
    outline: 0;
    font-size: ",
                  [Function],
                  "px;
    color: ",
                  [Function],
                  ";
    width: 100%;
    background-position: left top;
    background-repeat: no-repeat;
    background-size: contain;
    border: 0 solid transparent;
    border-bottom: 1px solid ",
                  [Function],
                  ";
    padding-bottom: ",
                  [Function],
                  ";
    margin-bottom: ",
                  [Function],
                  ";
    padding-top: ",
                  [Function],
                  ";

    ",
                  [Function],
                  "

    ",
                  [Function],
                  ";

    &:focus + .TextBox__label {
      font-size: ",
                  [Function],
                  "px;
      font-weight: ",
                  [Function],
                  ";
      top: 0;
    }
  }
  .success__checkmark {
    display: none;
  }
  &.textbox_validation_success .TextBox__input {
    border-bottom: 1px solid ",
                  [Function],
                  ";
  }

  &.textbox_validation_success .success__checkmark {
    display: block;
    width: 15px;
    height: 8px;
    margin-left: ",
                  [Function],
                  ";
    transform: rotate(-45deg);
    transform-origin: left;
    position: absolute;
    right: 0;
    bottom: 10px;

    &:before {
      content: '';
      position: absolute;
      width: 3px;
      height: 100%;
      background-color: ",
                  [Function],
                  ";
    }

    &:after {
      content: '';
      position: absolute;
      width: 100%;
      height: 3px;
      background-color: ",
                  [Function],
                  ";
      bottom: 0;
    }
  }

  ",
                  [Function],
                  ";
",
                  ";
",
                ],
              },
              "displayName": "Styled(TextBox)",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-gzVnrw",
              "target": [Function],
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          data-locator="gift-card-recaptchcb"
          id="recaptchaToken"
          name="recaptchaToken"
          placeholder="recaptcha value"
          title=""
          type="hidden"
        />
        <Styled(BodyCopy)
          className=""
          color="text.primary"
          component="p"
          fontFamily="secondary"
          fontSize="fs14"
          fontWeight="semibold"
          letterSpacing="normal"
          lineHeight="normal"
          lineHeights="lh115"
          tag="span"
          textAlign="left"
        >
          Remaining balance
        </Styled(BodyCopy)>
        <Styled(BodyCopy)
          className=""
          color="text.primary"
          component="p"
          fontFamily="secondary"
          fontSize="fs28"
          fontWeight="extrabold"
          letterSpacing="normal"
          lineHeight="normal"
          lineHeights="lh115"
          tag="span"
          textAlign="left"
        >
          $0
        </Styled(BodyCopy)>
      </div>
    </form>
  </div>
  <div
    className="cardTile__ctaLinks"
  >
    <Styled(Anchor)
      anchorVariation="primary"
      className="cardTile__anchor"
      data-locator="payment-giftcarddeletelink"
      fontSizeVariation="large"
      onClick={[Function]}
      to="/#"
      underline={true}
    >
      Delete
    </Styled(Anchor)>
  </div>
</div>
`;
